@@ -48,6 +48,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5691] fixed error when create graph if oracle configured to use comma as decimal separator (Vedmak)
 ..F....... [ZBX-5671] fixed error when save configuration in administration->general with oracle backend (Vedmak)
 A......... [ZBX-5693] fixed possibility to create graph with the same name as existing graph prototype within template (Toms)
 A......... [ZBX-5698] fixed API response after "triggerprototype.create", now request return "triggerids" after INSERT (Oleg)
